# adk-channels

./: .gitignore  AGENTS.md  README.md  SLACK_SETUP.md  TEMPLATES.md  pyproject.toml
.drs/: context.md  drs.config.yaml
.github/workflows/: ci.yml
examples/: agents.py  basic_slack_agent.py  session_service.py  slack_fastapi.py
examples/custom_runner/: main.py
examples/http_client_bridge/: main.py
examples/multi_app_server/: main.py
examples/slack_agent/: main.py
examples/two_process_deployment/: README.md  backend.py  slack_bridge.py
src/adk_channels/: __init__.py  adk_events.py  bridge.py  config.py  interactions.py  multi_app_bridge.py  registry.py  server.py  server_integration.py  slack_interactions.py  tool_ui.py  types.py
src/adk_channels/adapters/: __init__.py  base.py  slack.py  telegram.py  webhook.py
tests/: conftest.py  slack_bot.py  slack_debug.py  test_adk_events.py  test_core.py  test_interactions.py  test_multi_app.py  test_slack_adapter.py  test_slack_interactions.py  test_tool_ui.py
